# prometheus

./: .gitignore  BASELINE.md  LICENSE  README.md  RESEARCH_LOG.md  RESEARCH_NOTES.md  TODO.md  evaluate.py  program.md  prometheus.py  pyproject.toml  test_loop.py  train.py
configs/: cuda_3hr.toml  cuda_60min.toml  cuda_default.toml  cuda_overnight.toml  default.toml  smoke_test.toml  v3.toml  v4.toml
monitor/: index.html  server.py
scripts/: download_model.py  run_layer2.py  test_layer2.py
src/: curriculum.py  grpo.py  grpo_cuda.py  load_model_cuda.py  model_utils.py  model_utils_cuda.py  proposer.py  seed_problems.py  solver.py  template_proposer.py  verification_factory.py  verifier.py
