[project]
name = "prometheus"
version = "0.1.0"
description = "Self-evolving LLM training through autonomous verification expansion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.29.3",
    "mlx-lm>=0.28.3",
    "datasets>=4.2.0",
    "transformers>=4.56.2",
    "huggingface-hub>=0.30.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
eval = [
    "human-eval",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
]
